# onchain-receipt-card-api

./: .env.example  .gitignore  pyproject.toml  railway.toml  requirements.txt
app/: config.py  main.py
app/cache/: file_cache.py  manager.py
app/classifiers/: __init__.py  evm_classifier.py  solana_classifier.py
app/fetchers/: __init__.py  base_fetcher.py  solana_fetcher.py
app/models/: action.py  transaction.py
app/renderer/: card.py  svg_builder.py  templates.py
app/tokens/: registry.json  resolver.py
app/validation/: input.py  sanitize.py
tests/: conftest.py  test_base_fetcher.py  test_cache.py  test_edge_cases.py  test_evm_classifier.py  test_file_cache.py  test_og_page.py  test_renderer.py  test_sanitize.py  test_solana_classifier.py  test_solana_fetcher.py  test_token_resolver.py  test_validation.py
